--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+node_modules/
+bower_components/
+
 #################
 ## Eclipse
 #################
@@ -215,6 +219,5 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 
-node_modules/
 
 
