--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "core-elements": "Polymer/core-elements#~0.5.1",
-    "paper-elements": "Polymer/paper-elements#~0.5.1"
+    "paper-elements": "Polymer/paper-elements#~0.5.1",
+    "polymer": "Polymer/polymer#~0.5.1"
   }
 }
